[package]
name = "ccn-project"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.9", features = ["default", "macros"] }
tokio = { version = "1.40.0", features = ["rt-multi-thread", "fs"] }
askama = "0.12.1"
redis = "0.27.5"
tokio-postgres = "0.7.12"
validator = "0.19.0"
regex = "1.11.1"
rand = "0.8.5"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
log = "0.4.22"
urlencoding = "2.1.3"
dotenv = "0.15.0"
env_logger = "0.11.6"
jsonwebtoken = "9.3.0"

[bin-dependencies]
cargo-watch = "8.5.3"
